--- a/details.html
+++ b/details.html
@@ -12,8 +12,8 @@
    <body>
       <form>
          <h1>Sa-Mudra</h1>
-         <h2>Caller Details</h2>  
-          <input type="button" class="btn" tabindex="0" value="Generate File" onclick="Fetch('DETAILS');">
+         <h2>Call Record Details</h2>  
+          <input type="button" class="btn" tabindex="0" value="Generate File" onclick="FetchRecord('CALLRECORDING');">
        </form>
        <div id="tableUpdate">
               
