--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    </head>
    <body>
 
-      <form>
+      <form class="text-center">
 	<input type="button" class="btn" tabindex="0" value="Refresh" onclick="FetchFromParse('TEMPCOOR','1');">
         <a href="ShowSearch.Html" target="_self"><input type="button" class="btn" tabindex="0" value="Search" /></a>
         
