--- a/ShowSearch.Html
+++ b/ShowSearch.Html
@@ -120,7 +120,7 @@
          <h2>Do these issues listed below bother you ? </h2>
        <textarea type="text" id="IssuesBotherYou" readonly></textarea>
 
-         <a href="newIndex.html" target="_self"><button type="button" tabindex="0">Edit</button></a>
+         <a href="index.html" target="_self"><button type="button" tabindex="0">Edit</button></a>
               <button type="button" tabindex="1" onclick="Fetch('DETAILS');">Download All</button>
       </form>
    </body>
