--- a/new.html
+++ b/new.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/samudra.css">
     <script type="text/javascript" src="js/parse.js"></script>
     <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script type="text/javascript" src="js/customFirebase.js"></script>
     
     <title>Sa-Mudra registration</title>
@@ -14,7 +15,7 @@
 <body>
 
     <form class="text-center">
-        <input type="button" class="btn" tabindex="0" value="Refresh" onclick="FetchFromParse('TEMPCOOR','1');">
+        <input type="button" class="btn" tabindex="0" value="Refresh">
         <a href="ShowSearch.Html" target="_self">
             <input type="button" class="btn" tabindex="0" value="Search" />
         </a>
